<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.MainActivity">

    <LinearLayout
        android:id="@+id/lnr1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="20dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:onClick="goToUpdateProfile"
                android:src="@drawable/ic_edit_black_24dp"
                android:textColor="@color/colorTextWhite" />

            <TextView
                android:id="@+id/txtMainFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/hint_first_name"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtMainLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/hint_last_name"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtMainEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/hint_email"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtMainPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="end"
            android:text="@string/hint_phone_number"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="306dp"
        android:layout_height="469dp"
        android:layout_margin="40dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.721">

        <Button
            android:id="@+id/btnLouerClient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:text="Rent"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btnFindClient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:text="Find"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btnTrackClient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:text="Track"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btnContactClient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:text="Contact"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btnlogoutClient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:text="Logout"
            android:textColor="@color/colorWhite" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>